# www.zjusct.io

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tags.json
.github/workflows/: ci.yml
assets/: home-data.yaml  zjusct-widget.js
blog/: index.html
blog/archive/2018/: index.html
blog/archive/2019/: index.html
blog/archive/2025/: index.html
blog/category/ai/: index.html
blog/category/centos/: index.html
blog/category/cuda/: index.html
blog/category/ml/: index.html
competition/: index.html
docs/: index.md
docs/assets/: home-data.yaml
docs/guideline/: contribute.md  history.md  index.md  newcomer.md
falcon/: index.html
falcon/git/: index.html
falcon/mirror/: index.html
falcon/mirror-history/: index.html
guideline/: index.html
guideline/contribute/: index.html
guideline/history/: index.html
guideline/newcomer/: index.html
index/contribute/: index.html
index/history/: index.html
index/newcomer/: index.html
operation/: index.html
operation/hardware/: index.html
operation/network/: index.html
operation/observability/: index.html
operation/software/: index.html
operation/system/: index.html
optimization/: index.html
optimization/HPN/: index.html
optimization/parallel/: index.html
overrides/: home.html
search/: search_index.json
site/blog/: .authors.yml
site/stylesheets/: theme.css
zjusct-home/: index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  vite.config.ts
zjusct-home/src/: App.tsx  index.css  main-widget.tsx  main.tsx
(+99 files in other folders)
