[project]
name = "www-zjusct-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-drawio>=1.12.1",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-include-dir-to-nav>=1.2.0",
    "mkdocs-material>=9.7.0",
    "mkdocs-timetoread-plugin>=0.0.4",
    "neoteroi-mkdocs>=1.2.0",
]
